--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.0.7",
+    "google-map-react": "^2.2.1",
     "highlight.js": "^11.7.0",
     "install": "^0.13.0",
     "intl-segmenter-polyfill": "^0.4.4",
@@ -57,6 +58,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/google-map-react": "^2.1.10",
     "@types/react": "^18.2.55",
     "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
