feat: added map flow

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
-    "tailwind-merge": "^1.9.0"
+    "tailwind-merge": "^1.9.0",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
