--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "@types/react-dom": "^18.2.18",
     "@vercel/og": "^0.6.2",
     "axios": "^1.3.3",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clipboard-copy": "^4.0.1",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.0",
     "date-fns": "^2.29.3",
     "framer-motion": "^9.0.7",
     "google-map-react": "^2.2.1",
     "highlight.js": "^11.7.0",
     "install": "^0.13.0",
     "intl-segmenter-polyfill": "^0.4.4",
+    "lucide-react": "^0.372.0",
     "next": "^14.1.0",
     "npm": "^9.6.3",
     "react": "^18.2.0",
@@ -49,7 +51,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "swr": "^2.2.4",
-    "tailwind-merge": "^1.9.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
