--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "highlight.js": "^11.7.0",
     "install": "^0.13.0",
     "intl-segmenter-polyfill": "^0.4.4",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.372.0",
     "next": "^14.1.0",
     "npm": "^9.6.3",
